# okx_news_scraper

./: README.md  pyproject.toml  requirements.txt  setup.py
okx_news_scraper/: cli.py  scraper.py  utils.py
okx_news_scraper/data_example/: okx_announcements_2025-04-01_2025-04-15.json
